--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="http://connellmccarthy.com/" target="_blank" class="copyright">Background images found on Google.</a>
 
         <div class="centerLogo">
-            <img src="assets/720p.png">
+            <img src="assets/logo1.png">
         </div>
     </body>
 </html>
