i apparently forgot the favicon code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Universes by Hexadecimal</title>
         <link href="css/main.css" rel="stylesheet">
+        <link href="favicon.ico" rel="icon" type="image/x-icon">
     </head>
 
     <!--
