Attempt some ParticleJS tweaking

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <img class="bg" src="assets/universe2.jpg">
 
-        <a href="http://connellmccarthy.com/" target="_blank" class="copyright">Background images found on Google.</a>
+        <a href="http://google.com/" target="_blank" class="copyright">Background images found on Google.</a>
 
         <div class="centerLogo">
             <img src="assets/logo1.png">
