--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         not meant to see and interact with quarks.
     -->
 
-    <body onload="particlesJS.load('particles-js', 'assets/particles.json', function() {})">
-        <div id="particles-js"></div>
-        <script src="assets/particles.js"></script>
-
-        <div class="centerLogo">
-            <img src="assets/logo1.png">
+    <body>
+        <img class="dropdown" src="assets/background.jpg">
+        <div class=centerLogo>
+            <h1>UNIVERSES <br>
+                BY HEXADECIMAL.<span class="blinker">|</span></h1>
         </div>
+        <a href="https://vally5.deviantart.com/" target="_blank" class="copyright">Photography by Vally5 on DeviantArt.</a>
     </body>
 </html>
